<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Readbuffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom"/>

    <TextView
        android:id="@+id/Status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status" />

    <Button
        android:id="@+id/BTon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_on" />

    <Button
        android:id="@+id/BToff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_off" />

    <Button
        android:id="@+id/Showpaired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_paired_devices" />

    <Button
        android:id="@+id/Dicoverdev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discover_new_devices" />

    <Button
        android:id="@+id/Makedev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_disverable" />

    <ListView
        android:id="@+id/Listdev"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.appcompat.widget.LinearLayoutCompat>